# kafka-blog-series

celery-and-kafka/: README.md  docker-compose.yaml  pyproject.toml
celery-and-kafka/celery_and_kafka/: celery_app.py  celerybeat-schedule.db  main.py  tasks.py
local-kafka-connect/: Dockerfile_cdc  Dockerfile_connector_configure  README.md  docker-compose.yml
local-kafka-connect/connectors/cdc/: config.json  prod.json
local-kafka-connect/connectors/cdc/local_cdc/: local.json
local-kafka-connect/scripts/cdc/: entrypoint.sh
web-socket-kafka/web-socket-kafka/: README.md  build.gradle.kts  docker-compose.yaml  settings.gradle.kts
web-socket-kafka/web-socket-kafka/src/main/kotlin/: ChatServer.kt  MessageDispatcher.kt  ServerStarter.kt  SessionRegistry.kt  WebSessionConstants.kt
web-socket-kafka/web-socket-kafka/src/main/kotlin/client/: KafkaMessageClient.kt  SessionRegistryClient.kt
web-socket-kafka/web-socket-kafka/src/main/kotlin/constants/: Constants.kt
web-socket-kafka/web-socket-kafka/src/main/kotlin/handler/: MessageRedirectHandler.kt  SendMessageHandler.kt  WebSocketSessionHandler.kt
web-socket-kafka/web-socket-kafka/src/main/kotlin/model/: SessionRegistryRequest.kt  UserMessage.kt  UserSession.kt
web-socket-kafka/web-socket-kafka/src/main/kotlin/registry/: UserSessionRegistry.kt  WebSocketSessionRegistry.kt
web-socket-kafka/web-socket-kafka/src/main/kotlin/serialization/: Serializers.kt
web-socket-kafka/web-socket-kafka/src/main/resources/: logback.xml
