[tool.poetry]
name = "celery-and-kafka"
version = "0.1.0"
description = ""
authors = ["lip17 <lipei.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
celery = "^5.4.0"
redis = "^5.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
